# mcp-counter

./: Cargo.toml  tools.yaml
src/: counter.rs  main.rs
