[package]
name = "simple-mcp-server"
version = "0.1.0"
edition = "2024"


[dependencies]
rmcp = { version = "0.8.0", features = ["server", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
axum = "0.7"
tokio-util = "0.7"
askama = "0.12"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
schemars = "0.8"